--- a/src/components/sbb-card/sbb-card.scss
+++ b/src/components/sbb-card/sbb-card.scss
@@ -12,6 +12,7 @@
   --sbb-card-border-radius: var(--sbb-border-radius-4x);
   --sbb-card-animation-duration: var(--sbb-animation-duration-1x);
   --sbb-card-animation-easing: var(--sbb-animation-easing);
+  --sbb-card-border-color: transparent;
 }
 
 :host([negative]:not([negative='false'])) {
@@ -58,6 +59,10 @@
   --sbb-card-padding-block-end: var(--sbb-spacing-responsive-xxs);
 }
 
+:host([active]:not([active='false'])) {
+  --sbb-card-border-color: var(--sbb-color-smoke-default);
+}
+
 .sbb-card {
   @include sbb.stretch(width);
   @include sbb.stretch(height);
@@ -79,6 +84,7 @@
     background-color: transparent;
     content: '';
     inset: 0;
+    border: var(--sbb-border-width-2x) solid var(--sbb-card-border-color);
     border-radius: var(--sbb-card-border-radius);
   }
 
@@ -97,11 +103,11 @@
     -moz-appearance: none;
     -webkit-tap-highlight-color: transparent;
   }
-}
 
-:host([active]:not([active='false'])) {
-  .sbb-card::after {
-    border: var(--sbb-border-width-2x) solid var(--sbb-color-smoke-default);
+  @include sbb.hover-mq($hover: true) {
+    :host(:not([active]:not([active='false'])):hover) & {
+      @include sbb.shadow-level-9-hard;
+    }
   }
 }
 
@@ -109,14 +115,9 @@
   display: block;
   height: 100%;
   transition: transform var(--sbb-card-animation-duration) var(--sbb-card-animation-easing);
-}
 
-@include sbb.hover-mq($hover: true) {
-  // stylelint-disable selector-not-notation
-  :host(:not([active]:not([active='false'])):hover) .sbb-card {
-    @include sbb.shadow-level-9-hard;
-
-    .sbb-card__content {
+  @include sbb.hover-mq($hover: true) {
+    :host(:not([active]:not([active='false'])):hover) & {
       transform: translateY(#{sbb.px-to-rem-build(-2)});
     }
   }
