--- a/src/components/sbb-slider/sbb-slider.scss
+++ b/src/components/sbb-slider/sbb-slider.scss
@@ -116,10 +116,11 @@
 }
 
 // slider knob resize on click (active / focus)
-
 :host(:not(:is([disabled]:not([disabled='false']), [readonly]:not([readonly='false'])))) {
-  .sbb-slider__range-input:active ~ .sbb-slider__knob,
-  .sbb-slider__range-input:focus-visible ~ .sbb-slider__knob {
+  :is(
+      .sbb-slider__range-input:active ~ .sbb-slider__knob,
+      .sbb-slider__range-input:focus-visible ~ .sbb-slider__knob
+    ) {
     --sbb-slider-knob-size: #{sbb.px-to-rem-build(31)};
   }
 
