--- a/src/components/sbb-dialog/sbb-dialog.scss
+++ b/src/components/sbb-dialog/sbb-dialog.scss
@@ -61,7 +61,7 @@
   }
 }
 
-:host(:is(.sbb-dialog--opened, .sbb-dialog--opening)) {
+:host(:is([data-state='opened'], [data-state='opening'])) {
   pointer-events: all;
 
   @include sbb.mq($from: medium) {
@@ -74,7 +74,7 @@
   }
 }
 
-:host(.sbb-dialog--full-screen) {
+:host([data-fullscreen]) {
   --sbb-dialog-backdrop-color: transparent;
   --sbb-dialog-max-width: 100%;
   --sbb-dialog-max-height: 100%;
@@ -93,17 +93,15 @@
   --sbb-dialog-animation-duration: 0s;
 }
 
-:host(.sbb-dialog--full-screen:not([negative]:not([negative='false']))) {
+:host([data-fullscreen]:not([negative]:not([negative='false']))) {
   --sbb-dialog-background-color: var(--sbb-color-milk-default);
 }
 
-:host(.sbb-dialog--has-scrollbar:not(.sbb-dialog--full-screen)) {
+:host([data-overflows]:not([data-fullscreen])) {
   --sbb-dialog-header-padding-block: var(--sbb-spacing-responsive-s);
 }
 
-:host(
-    .sbb-dialog--has-scrollbar:not(.sbb-dialog--full-screen, [negative]:not([negative='false']))
-  ) {
+:host([data-overflows]:not([data-fullscreen], [negative]:not([negative='false']))) {
   --sbb-dialog-footer-border: none;
 }
 
@@ -126,12 +124,12 @@
     }
   }
 
-  :host(.sbb-dialog--closing) & {
+  :host([data-state='closing']) & {
     pointer-events: none;
     animation-name: close;
   }
 
-  :host(.sbb-dialog--full-screen) & {
+  :host([data-fullscreen]) & {
     width: 100%;
     height: 100%;
     border-radius: 0;
@@ -170,7 +168,7 @@
   background-color: var(--sbb-dialog-background-color);
   z-index: 10;
 
-  :host(.sbb-dialog--full-screen) & {
+  :host([data-fullscreen]) & {
     position: fixed;
     width: 100%;
     background-color: transparent;
@@ -199,7 +197,7 @@
   padding-block: var(--sbb-dialog-padding-block);
   overflow: auto;
 
-  :host(.sbb-dialog--full-screen) & {
+  :host([data-fullscreen]) & {
     padding-block-start: var(--sbb-spacing-fixed-20x);
     padding-inline: var(--sbb-layout-base-offset-responsive);
     height: 100vh;
@@ -216,10 +214,7 @@
 
 // stylelint-disable selector-not-notation
 :is(.sbb-dialog__header, .sbb-dialog__footer) {
-  :host(
-      .sbb-dialog--has-scrollbar:not(.sbb-dialog--full-screen, [negative]:not([negative='false']))
-    )
-    & {
+  :host([data-overflows]:not([data-fullscreen], [negative]:not([negative='false']))) & {
     @include sbb.shadow-level-9-soft;
   }
 }
