--- a/src/components/sbb-slider/sbb-slider.scss
+++ b/src/components/sbb-slider/sbb-slider.scss
@@ -27,19 +27,19 @@
   width: min(#{sbb.px-to-rem-build(400)}, 100%);
 }
 
-:host([disabled]) {
+:host([disabled]:not([disabled='false'])) {
   --sbb-slider-icon-color: var(--sbb-color-graphite-default);
   --sbb-slider-knob-color: var(--sbb-color-milk-default);
   --sbb-slider-knob-border-color: var(--sbb-slider-line-disabled-color);
 }
 
-:host([readonly]) {
+:host([readonly]:not([readonly='false'])) {
   --sbb-slider-icon-color: var(--sbb-color-smoke-default);
   --sbb-slider-knob-border-color: var(--sbb-slider-selected-line-disabled-color);
 }
 
-:host([disabled]),
-:host([readonly]) {
+:host([disabled]:not([disabled='false'])),
+:host([readonly]:not([readonly='false'])) {
   @include sbb.if-forced-colors {
     --sbb-slider-icon-color: GrayText;
     --sbb-slider-selected-line-disabled-color: GrayText;
@@ -116,10 +116,11 @@
 }
 
 // slider knob resize on click (active / focus)
-/* stylelint-disable plugin/stylelint-bem-namics */
-:host(:not(:is([disabled], [readonly]))) {
-  .sbb-slider__range-input:active ~ .sbb-slider__knob,
-  .sbb-slider__range-input:focus-visible ~ .sbb-slider__knob {
+:host(:not(:is([disabled]:not([disabled='false']), [readonly]:not([readonly='false'])))) {
+  :is(
+      .sbb-slider__range-input:active ~ .sbb-slider__knob,
+      .sbb-slider__range-input:focus-visible ~ .sbb-slider__knob
+    ) {
     --sbb-slider-knob-size: #{sbb.px-to-rem-build(31)};
   }
 
@@ -127,4 +128,3 @@
     @include sbb.focus-outline;
   }
 }
-/* stylelint-enable plugin/stylelint-bem-namics */
