--- a/src/global/styles/typography.scss
+++ b/src/global/styles/typography.scss
@@ -55,13 +55,13 @@ html {
   @include layout.page-spacing;
 }
 
-.sbb-grid-wide,
-.sbb-page-spacing-wide {
-  @include layout.page-spacing-wide;
+.sbb-grid-expanded,
+.sbb-page-spacing-expanded {
+  @include layout.page-spacing-expanded;
 }
 
 .sbb-grid,
-.sbb-grid-wide {
+.sbb-grid-expanded {
   @include layout.grid-base;
 }
 
