--- a/src/components/sbb-card-badge/sbb-card-badge.scss
+++ b/src/components/sbb-card-badge/sbb-card-badge.scss
@@ -5,11 +5,12 @@
 @include sbb.host-component-properties;
 
 :host {
-  --card-badge-color-primary: var(--sbb-color-white-default);
-  --card-badge-color-primary-negative: var(--sbb-color-black-default);
-  --card-badge-background-color-primary: var(--sbb-color-black-default);
-  --card-badge-background-color-primary-negative: var(--sbb-color-white-default);
-  --card-badge-border-color-primary-negative: var(--sbb-color-aluminium-default);
+  --sbb-card-badge-color-primary: var(--sbb-color-white-default);
+  --sbb-card-badge-color-primary-negative: var(--sbb-color-black-default);
+  --sbb-card-badge-background-color-primary: var(--sbb-color-black-default);
+  --sbb-card-badge-background-color-primary-negative: var(--sbb-color-white-default);
+  --sbb-card-badge-border-color-primary-negative: var(--sbb-color-aluminium-default);
+  --sbb-card-badge-height: #{sbb.px-to-rem-build(21)};
 
   @include sbb.if-forced-colors {
     border-inline-start: #{sbb.px-to-rem-build(1)} solid CanvasText;
@@ -23,6 +24,7 @@
   position: absolute;
   inset-block-start: 0;
   inset-inline-end: 0;
+  max-height: var(--sbb-card-badge-height);
   padding-inline-end: var(--sbb-spacing-fixed-6x);
   border-end-start-radius: var(--sbb-border-radius-4x);
   z-index: inherit;
@@ -51,15 +53,15 @@
   // Variants
   // *************************************************
   &--primary {
-    color: var(--card-badge-color-primary);
-    background-color: var(--card-badge-background-color-primary);
+    color: var(--sbb-card-badge-color-primary);
+    background-color: var(--sbb-card-badge-background-color-primary);
   }
 
   &--primary-negative {
-    color: var(--card-badge-color-primary-negative);
-    background-color: var(--card-badge-background-color-primary-negative);
-    border-block-end: solid 1px var(--card-badge-border-color-primary-negative);
-    border-inline-start: solid 1px var(--card-badge-border-color-primary-negative);
+    color: var(--sbb-card-badge-color-primary-negative);
+    background-color: var(--sbb-card-badge-background-color-primary-negative);
+    border-block-end: solid 1px var(--sbb-card-badge-border-color-primary-negative);
+    border-inline-start: solid 1px var(--sbb-card-badge-border-color-primary-negative);
   }
 
   &--regular {
