--- a/src/global/styles/_index.scss
+++ b/src/global/styles/_index.scss
@@ -7,15 +7,14 @@
 @forward './mixins/badge';
 @forward './mixins/buttons';
 @forward './mixins/card';
-@forward './mixins/grid_layout';
 @forward './mixins/helpers';
+@forward './mixins/layout';
 @forward './mixins/link';
 @forward './mixins/lists';
 @forward './mixins/panel';
 @forward './mixins/pearl-chain-bullet';
 @forward './mixins/scrollbar';
 @forward './mixins/shadows';
-@forward './mixins/spacing';
 @forward './mixins/typo';
 
 // Internals
