--- a/src/global/styles/typography.scss
+++ b/src/global/styles/typography.scss
@@ -1,5 +1,6 @@
-@use './mixins/typo';
+@use './mixins/layout';
 @use './mixins/lists';
+@use './mixins/typo';
 
 html {
   @include typo.text;
@@ -47,6 +48,21 @@ html {
 
 .sbb-step-list {
   @include lists.step-list;
+}
+
+.sbb-grid,
+.sbb-page-spacing {
+  @include layout.page-spacing;
+}
+
+.sbb-grid-expanded,
+.sbb-page-spacing-expanded {
+  @include layout.page-spacing-expanded;
+}
+
+.sbb-grid,
+.sbb-grid-expanded {
+  @include layout.grid-base;
 }
 
 .sbb-legend {
