refactor(sbb-teaser): remove obsolete calc in css

--- a/src/components/sbb-teaser/sbb-teaser.scss
+++ b/src/components/sbb-teaser/sbb-teaser.scss
@@ -33,7 +33,7 @@
   &:focus-visible {
     @include sbb.focus-outline;
 
-    border-radius: calc(var(--sbb-teaser-border-radius));
+    border-radius: var(--sbb-teaser-border-radius);
   }
 }
 
