--- a/src/components/sbb-journey-header/sbb-journey-header.scss
+++ b/src/components/sbb-journey-header/sbb-journey-header.scss
@@ -17,6 +17,11 @@
   @include sbb.scroll-margin-block-start;
 }
 
+sbb-title {
+  --sbb-title-margin-block-start: 0;
+  --sbb-title-margin-block-end: 0;
+}
+
 .sbb-journey-header {
   @include sbb.font-smoothing;
   @include sbb.title-5($exclude-spacing: true);
@@ -30,6 +35,12 @@
 
   :host([size='l']) & {
     @include sbb.title-4($exclude-spacing: true);
+  }
+
+  &[dir='rtl'] {
+    sbb-icon {
+      transform: rotate(-180deg);
+    }
   }
 }
 
