feat: fix shadow, add docs, fix css rule

--- a/src/components/sbb-header/sbb-header.scss
+++ b/src/components/sbb-header/sbb-header.scss
@@ -36,6 +36,7 @@
 .sbb-header--hidden {
   :host([hide-on-scroll]:not([hide-on-scroll='false'])) & {
     transform: translateY(-100%);
+    pointer-events: none;
   }
 }
 
