--- a/src/components/sbb-radio-button/sbb-radio-button.scss
+++ b/src/components/sbb-radio-button/sbb-radio-button.scss
@@ -78,23 +78,24 @@
       property: background-color, border;
     }
 
+    // We use the :checked pseudo-class to reflect the checked state
+    .sbb-radio-button__input:checked + & {
+      --sbb-radio-button-background-color: var(--sbb-color-red-default);
+
+      border-width: #{sbb.px-to-rem-build(6)};
+    }
+
     :host([data-group-disabled]) &,
     :host([disabled]:not([disabled='false'])) & {
       @include sbb.if-forced-colors {
         border-color: GrayText;
       }
     }
-  }
-}
 
-// The checked style using the :checked pseudo class
-.sbb-radio-button__input:checked + .sbb-radio-button__label-slot::before {
-  --sbb-radio-button-background-color: var(--sbb-color-red-default);
-
-  border-width: #{sbb.px-to-rem-build(6)};
-
-  :host([data-group-disabled]) &,
-  :host([disabled]:not([disabled='false'])) & {
-    --sbb-radio-button-background-color: var(--sbb-color-graphite-default);
+    // We use the :checked pseudo-class to reflect the checked state
+    :host([data-group-disabled]) .sbb-radio-button__input:checked + &,
+    :host([disabled]:not([disabled='false'])) .sbb-radio-button__input:checked + & {
+      --sbb-radio-button-background-color: var(--sbb-color-graphite-default);
+    }
   }
 }
