--- a/src/components/sbb-journey-header/sbb-journey-header.scss
+++ b/src/components/sbb-journey-header/sbb-journey-header.scss
@@ -5,12 +5,7 @@
 @include sbb.host-component-properties;
 
 :host {
-  --sbb-title-text-color-normal: var(--sbb-color-charcoal-default);
   --sbb-journey-header-gap: var(--sbb-spacing-fixed-1x);
-}
-
-:host([negative]:not([negative='false'])) {
-  @include sbb.title--negative;
 }
 
 :host([id]) {
@@ -18,24 +13,18 @@
 }
 
 sbb-title {
-  --sbb-title-margin-block-start: 0;
-  --sbb-title-margin-block-end: 0;
+  // Overwrite sbb-title default margin
+  margin: 0;
 }
 
 .sbb-journey-header {
   @include sbb.font-smoothing;
-  @include sbb.title-5($exclude-spacing: true);
 
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   gap: var(--sbb-journey-header-gap);
   width: fit-content;
-  color: var(--sbb-title-text-color-normal);
-
-  :host([size='l']) & {
-    @include sbb.title-4($exclude-spacing: true);
-  }
 
   &[dir='rtl'] {
     sbb-icon {
