--- a/src/components/sbb-form-field/sbb-form-field.scss
+++ b/src/components/sbb-form-field/sbb-form-field.scss
@@ -125,6 +125,9 @@
 ::slotted(*[slot='suffix']) {
   min-width: var(--sbb-icon-svg-width);
   display: flex;
+}
+
+::slotted(*[slot='prefix']) {
   color: var(--sbb-form-field-prefix-color);
 }
 
