feat: add data-hide-close-button attribute

--- a/src/components/sbb-tooltip/sbb-tooltip.scss
+++ b/src/components/sbb-tooltip/sbb-tooltip.scss
@@ -97,6 +97,12 @@
   }
 }
 
+.sbb-tooltip__close {
+  :host([data-hide-close-button]) & {
+    display: none;
+  }
+}
+
 .sbb-tooltip__content {
   display: flex;
   gap: var(--sbb-spacing-fixed-4x);
