--- a/src/global/styles/core/variables.scss
+++ b/src/global/styles/core/variables.scss
@@ -8,9 +8,18 @@
 
   --sbb-font-default-color: var(--sbb-color-charcoal-default);
 
-  //////////////////////////////////////////////////////////////////////////////
-  ///
-  /// Responsive typography/font size
+  // Focus outline
+  --sbb-focus-outline-color-default: var(--sbb-color-black-default);
+  --sbb-focus-outline-color-dark: var(--sbb-color-white-default);
+  --sbb-focus-outline-color: var(--sbb-focus-outline-color-default);
+  --sbb-focus-outline-width: var(--sbb-border-width-1x);
+
+  // Train formation
+  --sbb-train-formation-wagon-width: #{functions.px-to-rem-build(80)};
+  --sbb-train-formation-wagon-height: #{functions.px-to-rem-build(40)};
+  --sbb-train-formation-wagon-border-radius: #{functions.px-to-rem-build(12)};
+
+  // Title
   --sbb-font-size-title-1: var(--sbb-typo-scale-2-5x);
   --sbb-font-size-title-2: var(--sbb-typo-scale-2x);
   --sbb-font-size-title-3: var(--sbb-typo-scale-1-5x);
@@ -24,11 +33,56 @@
   --sbb-font-size-text-xs: var(--sbb-typo-scale-0-75x);
   --sbb-font-size-text-xxs: var(--sbb-typo-scale-0-75x);
 
+  // Spacing
+  --sbb-spacing-responsive-xxxs: var(--sbb-spacing-responsive-xxxs-zero);
+  --sbb-spacing-responsive-xxs: var(--sbb-spacing-responsive-xxs-zero);
+  --sbb-spacing-responsive-xs: var(--sbb-spacing-responsive-xs-zero);
+  --sbb-spacing-responsive-s: var(--sbb-spacing-responsive-s-zero);
+  --sbb-spacing-responsive-m: var(--sbb-spacing-responsive-m-zero);
+  --sbb-spacing-responsive-l: var(--sbb-spacing-responsive-l-zero);
+  --sbb-spacing-responsive-xl: var(--sbb-spacing-responsive-xl-zero);
+  --sbb-spacing-responsive-xxl: var(--sbb-spacing-responsive-xxl-zero);
+
+  // Layout
+  --sbb-layout-base-offset-responsive: var(--sbb-layout-base-offset-responsive-zero);
+  --sbb-grid-base-columns: var(--sbb-layout-base-grid-columns-zero);
+  --sbb-grid-base-gutter-responsive: var(--sbb-layout-base-grid-gutter-responsive-zero);
+
+  // Button
+  --sbb-size-button-m-min-height: var(--sbb-size-button-m-min-height-zero);
+  --sbb-size-button-l-min-height: var(--sbb-size-button-l-min-height-zero);
+
+  // Form
+  --sbb-size-form-element-m-min-height: var(--sbb-size-form-element-m-min-height-zero);
+  --sbb-size-form-element-l-min-height: var(--sbb-size-form-element-l-min-height-zero);
+
+  // Header
+  --sbb-header-height: var(--sbb-spacing-fixed-14x);
+
+  @include mediaqueries.mq($from: micro) {
+    // Layout
+    --sbb-layout-base-offset-responsive: var(--sbb-layout-base-offset-responsive-micro);
+    --sbb-grid-base-columns: var(--sbb-layout-base-grid-columns-micro);
+    --sbb-grid-base-gutter-responsive: var(--sbb-layout-base-grid-gutter-responsive-micro);
+  }
+
   @include mediaqueries.mq($from: small) {
+    // Title
     --sbb-font-size-title-1: var(--sbb-typo-scale-3x);
+
+    // Spacing
+    --sbb-spacing-responsive-l: var(--sbb-spacing-responsive-l-small);
+    --sbb-spacing-responsive-xl: var(--sbb-spacing-responsive-xl-small);
+    --sbb-spacing-responsive-xxl: var(--sbb-spacing-responsive-xxl-small);
+
+    // Layout
+    --sbb-layout-base-offset-responsive: var(--sbb-layout-base-offset-responsive-small);
+    --sbb-grid-base-columns: var(--sbb-layout-base-grid-columns-small);
+    --sbb-grid-base-gutter-responsive: var(--sbb-layout-base-grid-gutter-responsive-small);
   }
 
   @include mediaqueries.mq($from: medium) {
+    // Title
     --sbb-font-size-title-2: var(--sbb-typo-scale-2-5x);
     --sbb-font-size-title-3: var(--sbb-typo-scale-2x);
     --sbb-font-size-title-4: var(--sbb-typo-scale-1-5x);
@@ -39,41 +93,8 @@
     --sbb-font-size-text-m: var(--sbb-typo-scale-1-125x);
     --sbb-font-size-text-s: var(--sbb-typo-scale-default);
     --sbb-font-size-text-xs: var(--sbb-typo-scale-0-875x);
-  }
 
-  @include mediaqueries.mq($from: large) {
-    --sbb-font-size-title-1: var(--sbb-typo-scale-3-5x);
-  }
-
-  @include mediaqueries.mq($from: ultra) {
-    --sbb-font-size-title-1: var(--sbb-typo-scale-4x);
-  }
-
-  //////////////////////////////////////////////////////////////////////////////
-  ///
-  /// Responsive spacing
-  --sbb-spacing-responsive-xxxs: var(--sbb-spacing-responsive-xxxs-zero);
-  --sbb-spacing-responsive-xxs: var(--sbb-spacing-responsive-xxs-zero);
-  --sbb-spacing-responsive-xs: var(--sbb-spacing-responsive-xs-zero);
-  --sbb-spacing-responsive-s: var(--sbb-spacing-responsive-s-zero);
-  --sbb-spacing-responsive-m: var(--sbb-spacing-responsive-m-zero);
-  --sbb-spacing-responsive-l: var(--sbb-spacing-responsive-l-zero);
-  --sbb-spacing-responsive-xl: var(--sbb-spacing-responsive-xl-zero);
-  --sbb-spacing-responsive-xxl: var(--sbb-spacing-responsive-xxl-zero);
-  --sbb-layout-base-offset-responsive: var(--sbb-layout-base-offset-responsive-zero);
-
-  @include mediaqueries.mq($from: micro) {
-    --sbb-layout-base-offset-responsive: var(--sbb-layout-base-offset-responsive-micro);
-  }
-
-  @include mediaqueries.mq($from: small) {
-    --sbb-spacing-responsive-l: var(--sbb-spacing-responsive-l-small);
-    --sbb-spacing-responsive-xl: var(--sbb-spacing-responsive-xl-small);
-    --sbb-spacing-responsive-xxl: var(--sbb-spacing-responsive-xxl-small);
-    --sbb-layout-base-offset-responsive: var(--sbb-layout-base-offset-responsive-small);
-  }
-
-  @include mediaqueries.mq($from: medium) {
+    // Spacing
     --sbb-spacing-responsive-xxxs: var(--sbb-spacing-responsive-xxxs-medium);
     --sbb-spacing-responsive-xxs: var(--sbb-spacing-responsive-xxs-medium);
     --sbb-spacing-responsive-xs: var(--sbb-spacing-responsive-xs-medium);
@@ -82,123 +103,61 @@
     --sbb-spacing-responsive-l: var(--sbb-spacing-responsive-l-medium);
     --sbb-spacing-responsive-xl: var(--sbb-spacing-responsive-xl-medium);
     --sbb-spacing-responsive-xxl: var(--sbb-spacing-responsive-xxl-medium);
+
+    // Layout
     --sbb-layout-base-offset-responsive: var(--sbb-layout-base-offset-responsive-medium);
+    --sbb-grid-base-columns: var(--sbb-layout-base-grid-columns-medium);
+    --sbb-grid-base-gutter-responsive: var(--sbb-layout-base-grid-gutter-responsive-medium);
+
+    // Button
+    --sbb-size-button-m-min-height: var(--sbb-size-button-m-min-height-medium);
+    --sbb-size-button-l-min-height: var(--sbb-size-button-l-min-height-medium);
+
+    // Form
+    --sbb-size-form-element-m-min-height: var(--sbb-size-form-element-m-min-height-medium);
+    --sbb-size-form-element-l-min-height: var(--sbb-size-form-element-l-min-height-medium);
+
+    // Header
+    --sbb-header-height: var(--sbb-spacing-fixed-24x);
   }
 
   @include mediaqueries.mq($from: large) {
+    // Title
+    --sbb-font-size-title-1: var(--sbb-typo-scale-3-5x);
+
+    // Spacing
     --sbb-spacing-responsive-l: var(--sbb-spacing-responsive-l-large);
     --sbb-spacing-responsive-xl: var(--sbb-spacing-responsive-xl-large);
     --sbb-spacing-responsive-xxl: var(--sbb-spacing-responsive-xxl-large);
+
+    // Layout
     --sbb-layout-base-offset-responsive: var(--sbb-layout-base-offset-responsive-large);
-  }
-
-  @include mediaqueries.mq($from: wide) {
-    --sbb-spacing-responsive-m: var(--sbb-spacing-responsive-m-wide);
-    --sbb-layout-base-offset-responsive: var(--sbb-layout-base-offset-responsive-wide);
-  }
-
-  @include mediaqueries.mq($from: ultra) {
-    --sbb-spacing-responsive-l: var(--sbb-spacing-responsive-l-ultra);
-    --sbb-spacing-responsive-xl: var(--sbb-spacing-responsive-xl-ultra);
-    --sbb-spacing-responsive-xxl: var(--sbb-spacing-responsive-xxl-ultra);
-    --sbb-layout-base-offset-responsive: var(--sbb-layout-base-offset-responsive-ultra);
-  }
-
-  //////////////////////////////////////////////////////////////////////////////
-  ///
-  /// Responsive base grid definition
-
-  --sbb-grid-base-columns: var(--sbb-layout-base-grid-columns-zero);
-
-  @include mediaqueries.mq($from: micro) {
-    --sbb-grid-base-columns: var(--sbb-layout-base-grid-columns-micro);
-  }
-  @include mediaqueries.mq($from: small) {
-    --sbb-grid-base-columns: var(--sbb-layout-base-grid-columns-small);
-  }
-  @include mediaqueries.mq($from: medium) {
-    --sbb-grid-base-columns: var(--sbb-layout-base-grid-columns-medium);
-  }
-  @include mediaqueries.mq($from: large) {
     --sbb-grid-base-columns: var(--sbb-layout-base-grid-columns-large);
-  }
-  @include mediaqueries.mq($from: wide) {
-    --sbb-grid-base-columns: var(--sbb-layout-base-grid-columns-wide);
-  }
-  @include mediaqueries.mq($from: ultra) {
-    --sbb-grid-base-columns: var(--sbb-layout-base-grid-columns-ultra);
-  }
-
-  //////////////////////////////////////////////////////////////////////////////
-  ///
-  /// Responsive base grid gutter
-
-  --sbb-grid-base-gutter-responsive: var(--sbb-layout-base-grid-gutter-responsive-zero);
-
-  @include mediaqueries.mq($from: micro) {
-    --sbb-grid-base-gutter-responsive: var(--sbb-layout-base-grid-gutter-responsive-micro);
-  }
-  @include mediaqueries.mq($from: small) {
-    --sbb-grid-base-gutter-responsive: var(--sbb-layout-base-grid-gutter-responsive-small);
-  }
-  @include mediaqueries.mq($from: medium) {
-    --sbb-grid-base-gutter-responsive: var(--sbb-layout-base-grid-gutter-responsive-medium);
-  }
-  @include mediaqueries.mq($from: large) {
     --sbb-grid-base-gutter-responsive: var(--sbb-layout-base-grid-gutter-responsive-large);
   }
+
   @include mediaqueries.mq($from: wide) {
+    // Spacing
+    --sbb-spacing-responsive-m: var(--sbb-spacing-responsive-m-wide);
+
+    // Layout
+    --sbb-layout-base-offset-responsive: var(--sbb-layout-base-offset-responsive-wide);
+    --sbb-grid-base-columns: var(--sbb-layout-base-grid-columns-wide);
     --sbb-grid-base-gutter-responsive: var(--sbb-layout-base-grid-gutter-responsive-wide);
   }
 
-  //////////////////////////////////////////////////////////////////////////////
-  ///
-  /// Responsive button size
+  @include mediaqueries.mq($from: ultra) {
+    // Title
+    --sbb-font-size-title-1: var(--sbb-typo-scale-4x);
 
-  --sbb-size-button-m-min-height: var(--sbb-size-button-m-min-height-zero);
-  --sbb-size-button-l-min-height: var(--sbb-size-button-l-min-height-zero);
+    // Spacing
+    --sbb-spacing-responsive-l: var(--sbb-spacing-responsive-l-ultra);
+    --sbb-spacing-responsive-xl: var(--sbb-spacing-responsive-xl-ultra);
+    --sbb-spacing-responsive-xxl: var(--sbb-spacing-responsive-xxl-ultra);
 
-  @include mediaqueries.mq($from: medium) {
-    --sbb-size-button-m-min-height: var(--sbb-size-button-m-min-height-medium);
-    --sbb-size-button-l-min-height: var(--sbb-size-button-l-min-height-medium);
-  }
-
-  //////////////////////////////////////////////////////////////////////////////
-  ///
-  /// Responsive form element size
-
-  --sbb-size-form-element-m-min-height: var(--sbb-size-form-element-m-min-height-zero);
-  --sbb-size-form-element-l-min-height: var(--sbb-size-form-element-l-min-height-zero);
-
-  @include mediaqueries.mq($from: medium) {
-    --sbb-size-form-element-m-min-height: var(--sbb-size-form-element-m-min-height-medium);
-    --sbb-size-form-element-l-min-height: var(--sbb-size-form-element-l-min-height-medium);
-  }
-
-  //////////////////////////////////////////////////////////////////////////////
-  ///
-  /// Focus
-
-  --sbb-focus-outline-color-default: var(--sbb-color-black-default);
-  --sbb-focus-outline-color-dark: var(--sbb-color-white-default);
-  --sbb-focus-outline-color: var(--sbb-focus-outline-color-default);
-  --sbb-focus-outline-width: var(--sbb-border-width-1x);
-
-  //////////////////////////////////////////////////////////////////////////////
-  ///
-  /// SBB Train-formation
-
-  --sbb-train-formation-wagon-width: #{functions.px-to-rem-build(80)};
-  --sbb-train-formation-wagon-height: #{functions.px-to-rem-build(40)};
-  --sbb-train-formation-wagon-border-radius: #{functions.px-to-rem-build(12)};
-
-  //////////////////////////////////////////////////////////////////////////////
-  ///
-  /// Header
-
-  --sbb-header-height: var(--sbb-spacing-fixed-14x);
-
-  @include mediaqueries.mq($from: medium) {
-    --sbb-header-height: var(--sbb-spacing-fixed-24x);
+    // Layout
+    --sbb-layout-base-offset-responsive: var(--sbb-layout-base-offset-responsive-ultra);
+    --sbb-grid-base-columns: var(--sbb-layout-base-grid-columns-ultra);
+    --sbb-grid-base-gutter-responsive: var(--sbb-layout-base-grid-gutter-responsive-ultra);
   }
 }
