--- a/src/components/sbb-tooltip/sbb-tooltip.scss
+++ b/src/components/sbb-tooltip/sbb-tooltip.scss
@@ -10,7 +10,7 @@
   --sbb-tooltip-position-y: 0;
   --sbb-tooltip-arrow-size: var(--sbb-spacing-fixed-4x);
   --sbb-tooltip-arrow-position-x: 0;
-  --sbb-tooltip-max-width: calc(100vw - var(--sbb-spacing-fixed-8x));
+  --sbb-tooltip-max-width: calc(100% - var(--sbb-spacing-fixed-8x));
   --sbb-tooltip-border-radius: var(--sbb-border-radius-8x);
   --sbb-tooltip-padding: var(--sbb-spacing-fixed-4x);
   --sbb-tooltip-background: var(--sbb-color-white-default);
@@ -94,6 +94,12 @@
 
   @include sbb.if-forced-colors {
     outline: var(--sbb-border-width-1x) solid CanvasText;
+  }
+}
+
+.sbb-tooltip__close {
+  :host([data-hide-close-button]) & {
+    display: none;
   }
 }
 
