--- a/src/components/sbb-time-input/sbb-time-input.scss
+++ b/src/components/sbb-time-input/sbb-time-input.scss
@@ -11,7 +11,18 @@
     --sbb-time-input-max-width: #{sbb.px-to-rem-build(65)};
   }
 
+  // Color is inherited from sbb-form-field, if the sbb-time-input is used within it.
+  --sbb-time-input-color: var(--sbb-form-field-text-color, var(--sbb-color-charcoal-default));
+
   display: inline-block;
+}
+
+:host([disabled]:not([disabled='false'])) {
+  --sbb-time-input-color: var(--sbb-form-field-text-color, var(--sbb-color-graphite-default));
+
+  @include sbb.if-forced-colors {
+    --sbb-time-input-color: var(--sbb-form-field-text-color, GrayText);
+  }
 }
 
 input {
@@ -20,7 +31,5 @@ input {
   @include sbb.input-reset;
 
   max-width: var(--sbb-time-input-max-width);
-
-  // Inherit color from sbb-form-field context as there is no standalone usage planned.
-  color: var(--sbb-form-field-text-color);
+  color: var(--sbb-time-input-color);
 }
